# stat_arb_prod

./: .env.template  .gitignore  Dockerfile  HOURLY_DAILY_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  README.md  check_date_range.py  check_hourly_table_structure.py  check_table_structure.py  check_tables.py  concatenate_files.py  debug_cointegration_query.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.bat  run_daily_analysis.py  run_hourly_analysis.py  run_statistical_arbitrage_analysis.py  setup.py  test_advanced_metrics.py  test_config.py  test_hourly_config.py  update_hourly_table.py  verify_advanced_metrics.py
analytics/: __init__.py  statistics_calculator.py
analytics/stats/: __init__.py  audit_logger.py  base_statistic.py  cointegration_manager.py  configuration_manager.py  data_manager.py  database_manager.py  hourly_statistics_manager.py  metrics.py  orchestrator.py  performance_monitor.py  result_validator.py  scheduler.py
analytics/stats/modules/: __init__.py
analytics/stats/modules/basic/: __init__.py
analytics/stats/modules/mean_reversion/: __init__.py
analytics/stats/modules/pair_trading/: __init__.py  base_pair_statistic.py  half_life.py
docs/: zscore_breach_counter.md  zscore_breach_integration.md
examples/: use_zscore_breach_counter.py
scripts/: add_zscore_breach_columns.py  check_tables.py  config_switcher.py  create_tables_simple.py  create_tables_simple_new.py  deduplicate_data.sql  deduplicate_database.py  deploy.sh  optimize_database.py  setup_dev_env.sh  strategy_analysis.py
(+12 files in other folders)
